# Konnaxion

./: .gitignore  .smartignore  KonnaxionV2files.txt  LICENSE  MonCode.lnk  PAthFrontEndV14.txt  README.md  README_DEEP.md  README_PATCHED.md  RUN_backend_local.bat  RUN_frontend_local.bat  all_paths.txt  backendPaths.txt  backend_bundle.txt  bundle_frontend.py  classes_App.puml  collect_sources.py  combined_manifest.yml  concat-migrated-ui.py  concat_EkoH20251125_074019.txt  concatenebackend.py  configOutput.txt  filesys.txt  frontend.txt  frontend_bundle.txt  konnaxionPATH.txt  konnaxion_endpoint_fix_report.json  konnaxion_endpoint_fix_report_targeted.json  konnaxionfiles.txt  kp.txt  kv14_backup.cmd  manage.py  manifest_back.yml  manifest_front.yml  manifest_infra.yml  manifest_to_structurizr.py  merge_manifests.py  merged_config_files.txt  merged_output.txt  migrate-ui-v1-to-v14.ps1  (+22 more)
--konnaxion-frontend/: package-lock.json  (+1 more)
TOMOVEINKONNAXION-EKOH/: .pre-commit-config.yaml  ConcatEkoh.py  Dockerfile.dev  Makefile  README.md  ToDo (instructions).txt  concatEkoh_20251202_075948.txt  create_ekoh_scaffold.bat  docker-compose.dev.yml  paths.txt  pyproject.toml  ruff.toml
TOMOVEINKONNAXION-EKOH/.github/workflows/: ekoh-smartvote.yml  secrets-example.yml
TOMOVEINKONNAXION-EKOH/config/: celery.py  settings_addons.py
TOMOVEINKONNAXION-EKOH/docs/: openapi.yaml
TOMOVEINKONNAXION-EKOH/infra/db/: partition_helper.sql
TOMOVEINKONNAXION-EKOH/modules/ekoh-smartvote/ekoh/: admin_partition.py  apps.py
TOMOVEINKONNAXION-EKOH/modules/ekoh-smartvote/smart_vote/: apps.py  urls.py
(+1574 files in other folders)
